--- a/src/oop/demogiaodien.form
+++ b/src/oop/demogiaodien.form
@@ -70,7 +70,7 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jScrollPane4" max="32767" attributes="0"/>
                   </Group>
-                  <Component id="jTabbedPane1" pref="531" max="32767" attributes="0"/>
+                  <Component id="jTabbedPane1" pref="523" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="ndcodinh" min="-2" max="-2" attributes="0"/>
@@ -128,13 +128,17 @@
                               <Group type="102" attributes="0">
                                   <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="jComboBox2" min="-2" pref="87" max="-2" attributes="0"/>
+                                  <Component id="jComboBox2" min="-2" pref="157" max="-2" attributes="0"/>
+                                  <EmptySpace max="-2" attributes="0"/>
+                                  <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
+                                  <EmptySpace max="-2" attributes="0"/>
+                                  <Component id="jComboBox3" min="-2" pref="89" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Component id="jButton5" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace pref="649" max="32767" attributes="0"/>
+                          <EmptySpace pref="462" max="32767" attributes="0"/>
                       </Group>
                       <Group type="102" attributes="0">
                           <Component id="jScrollPane2" max="32767" attributes="0"/>
@@ -153,13 +157,15 @@
                       <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jComboBox2" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jButton5" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jComboBox3" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
-                          <EmptySpace min="0" pref="53" max="32767" attributes="0"/>
+                          <EmptySpace min="0" pref="61" max="32767" attributes="0"/>
                           <Component id="jButton1" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" attributes="0">
@@ -174,7 +180,7 @@
       <SubComponents>
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
-            <Property name="text" type="java.lang.String" value="TAG:"/>
+            <Property name="text" type="java.lang.String" value="TYPE"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="jButton1">
@@ -198,15 +204,29 @@
         </Component>
         <Component class="javax.swing.JComboBox" name="jComboBox2">
           <Properties>
+            <Property name="maximumRowCount" type="int" value="14"/>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="4">
-                <StringItem index="0" value="Item 1"/>
-                <StringItem index="1" value="Item 2"/>
-                <StringItem index="2" value="Item 3"/>
-                <StringItem index="3" value="Item 4"/>
+              <StringArray count="14">
+                <StringItem index="0" value="Ch&#x1ecd;n n&#x1ed9;i dung:"/>
+                <StringItem index="1" value="Nh&#xe0; &#x111;&#x1ea7;u t&#x1b0; n&#x1b0;&#x1edb;c ngo&#xe0;i"/>
+                <StringItem index="2" value="C&#x1ed5; phi&#x1ebf;u n&#x1ed5;i b&#x1ead;t"/>
+                <StringItem index="3" value="C&#x1ed5; phi&#x1ebf;u ng&#xe2;n h&#xe0;ng ch&#x1ed1;t phi&#xea;n"/>
+                <StringItem index="4" value="Thanh kho&#x1ea3;n"/>
+                <StringItem index="5" value="Giao d&#x1ecb;ch th&#x1ecf;a thu&#x1ead;n/chuy&#x1ec3;n nh&#x1b0;&#x1ee3;ng th&#x1ecf;a thu&#x1ead;n"/>
+                <StringItem index="6" value="&#x110;&#x1eb7;c t&#xed;nh N&#x1ed5;i b&#x1ead;t"/>
+                <StringItem index="7" value="Kh&#x1ed1;i ngo&#x1ea1;i"/>
+                <StringItem index="8" value="C&#x1ed5; phi&#x1ebf;u ch&#x1ee9;ng kho&#xe1;n"/>
+                <StringItem index="9" value="C&#x1ed5; phi&#x1ebf;u ng&#xe2;n h&#xe0;ng"/>
+                <StringItem index="10" value="C&#x1ed5; phi&#x1ebf;u Penny v&#xe0; midcap"/>
+                <StringItem index="11" value="T&#x1ed5;ng h&#x1ee3;p theo th&#x1edd;i gian"/>
+                <StringItem index="12" value="K&#x1ef7; l&#x1ee5;c"/>
+                <StringItem index="13" value="B&#xe1;n ra/mua l&#x1ea1;i"/>
               </StringArray>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jComboBox2ActionPerformed"/>
+          </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
@@ -234,6 +254,25 @@
             </Component>
           </SubComponents>
         </Container>
+        <Component class="javax.swing.JLabel" name="jLabel2">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="TAG"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JComboBox" name="jComboBox3">
+          <Properties>
+            <Property name="maximumRowCount" type="int" value="15"/>
+            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+              <StringArray count="0"/>
+            </Property>
+          </Properties>
+          <Events>
+            <EventHandler event="componentAdded" listener="java.awt.event.ContainerListener" parameters="java.awt.event.ContainerEvent" handler="jComboBox3ComponentAdded"/>
+          </Events>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+          </AuxValues>
+        </Component>
       </SubComponents>
     </Container>
     <Container class="javax.swing.JTabbedPane" name="jTabbedPane1">
@@ -279,7 +318,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="jCalendar1" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="0" pref="353" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="345" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
